--- a/components/i2lzohey1-java-quarkus/overlays/development/deployment-patch.yaml
+++ b/components/i2lzohey1-java-quarkus/overlays/development/deployment-patch.yaml
@@ -1,16 +1,16 @@
 apiVersion: apps/v1
 kind: Deployment
-metadata:   
-  annotations:  
+metadata:
+  annotations:
     tad.gitops.set/image: ".spec.template.spec.containers[0].image"
     tad.gitops.get/image: ".spec.template.spec.containers[0].image"
     tad.gitops.set/replicas: ".spec.replicas"
-    tad.gitops.get/replicas: ".spec.replicas" 
+    tad.gitops.get/replicas: ".spec.replicas"
   name: i2lzohey1-java-quarkus
 spec:
-  replicas: 1 
-  template: 
+  replicas: 1
+  template:
     spec:
       containers:
-      - image: quay.io/redhat-appstudio/dance-bootstrap-app:latest
-        name: container-image  
+        - image: rhtap-quay-quay-rhtap-quay.apps.rosa.kx-c295942e79.hanz.p3.openshiftapps.com/rhtap/rhtap-qe:7847f9f697b992e758f1990d78e17640fa2fca6d@sha256:cdf539d74d340879e3cd09d7c4c62b79b7d05aaf621572c0a5a4edba7100411f
+          name: container-image
